fixed animation visibility issue

--- a/src/scss/partials/_animations.scss
+++ b/src/scss/partials/_animations.scss
@@ -10,8 +10,8 @@
 .animated {
  -webkit-animation-duration: 3s;
   animation-duration: 3s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 }
 
 
@@ -46,6 +46,7 @@
   to {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
+    opacity:1;
   }
 }
 
@@ -80,7 +81,7 @@
   to {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    visibility: visible;   //brock added
+    opacity:1;
   }
 }
 
